[package]
name = "druid-rune"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
druid = "0.7.0"
rune = {version="0.10.3"}
rune-modules = {version="0.10.3", features=["serde_json"]}
visdom = "0.5.1"
simplecss = "0.2.1"